--- a/package.json
+++ b/package.json
@@ -19,8 +19,6 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.2",
-    "nodemon": "^3.1.4",
-    "react-redux": "^9.1.2",
-    "redux": "^5.0.1"
+    "nodemon": "^3.1.4"
   }
 }
