Profile picture upload functionality

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGODB_URI='mongodb+srv://dejavu:Draven0521@traveloverloadapi.7qqrj.mongodb.net/Travel-API?retryWrites=true&w=majority&appName=TravelOverloadApi'
 SECRET_KEY=mysecretkey
+#CLIENT_URL="https://travel-overload.vercel.app/"
+CLIENT_URL="http://localhost:3000"
